--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@sentry/node": "^7.45.0",
+    "@sentry/tracing": "^7.45.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
@@ -17,7 +19,8 @@
     "mongoose": "^6.8.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "socket.io": "^4.6.1"
   },
   "name": "collegia",
   "version": "1.0.0",
